--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -77,7 +77,7 @@
             <p id="back-content">
               <span align="center" style="display:table; margin: auto; font-style: italic; font-size: 0.8em">
                 To see the full directions of the recipe, please visit:<br />
-                <a href=>{{ r['recipe']['url'] }}</a>
+                <a href={{ r['recipe']['url'] }} target="_blank">{{ r['recipe']['url'] }}</a>
               </span>
               <br />
               Diet Cautions in Ingredients: <br />
