--- a/static/front-end/index.css
+++ b/static/front-end/index.css
@@ -4,11 +4,9 @@
 body {
 	/* position: relative; */
 	background-image: url('../bg_main.png');
-	/*height: 100vh;*/
-	/*width: 100vw;*/
+	height: 100vh;
+	width: 100vw;
 	overflow: hidden;
-	background-repeat: no-repeat;
-	background-size:100% auto;
 }
 
 .website-title {
@@ -95,7 +93,7 @@ input[type=text]:focus {
 }
 
 #image-preview-c {
-	position: relative;
+	position: absolute;
 	top: 72.05322807vh;
 	left:0px;
 	height: 25vh;
